# TimeTracker_2

./: .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  CLAUDE.md  README.md  angular.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.spec.json
.husky/: pre-commit  pre-push
adrs/: CLAUDE.md  README.md  template.md
adrs/1-frontend/: ADR-10001-angular-v21-as-frontend-framework.md  ADR-10002-signal-based-state-management.md  ADR-10003-angular-material-as-component-library.md  ADR-10004-scss-with-stylelint.md  ADR-10005-module-based-architecture.md  ADR-10006-strict-typescript-configuration.md  ADR-10007-path-aliases.md  ADR-10008-code-quality-tooling.md  ADR-10009-date-fns-as-date-utility.md  ADR-10010-transloco-as-i18n-library.md  ADR-10011-component-base-class-hierarchy.md  ADR-10012-onpush-change-detection.md  ADR-10013-supabase-auth.md  ADR-10014-theming-and-dark-mode.md  ADR-10015-design-token-abstraction.md  (+2 more)
src/: index.html  styles.scss
src-tauri/: Cargo.toml  entitlements.mac.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: README.md  timesapp-mac-active-win-aarch64-apple-darwin  timesapp-mac-active-win-x86_64-apple-darwin
src-tauri/capabilities/: main.json
src-tauri/resources/WinUtilities/: GetBrowserUrl.deps.json
src-tauri/src/: contract.rs  lib.rs  migration.rs  system.rs
src-tauri/src/activity/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/idle/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: contract_parity.rs
src/app/: app-module.ts  (+4 more)
(+318 files in other folders)
