[package]
name = "time-tracker-2"
version = "0.1.0"
description = "TimeTracker_2 desktop shell"
authors = ["Aki Hoeller"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
gethostname = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
active-win-pos-rs = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "linux")'.dependencies]
user-idle = "0.6"
